style: fix overflow x scroll for homepage

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -621,11 +621,11 @@ video {
 .left-10 {
   left: 2.5rem;
 }
+.left-16 {
+  left: 4rem;
+}
 .left-2 {
   left: 0.5rem;
-}
-.left-24 {
-  left: 6rem;
 }
 .left-3 {
   left: 0.75rem;
@@ -648,11 +648,11 @@ video {
 .right-10 {
   right: 2.5rem;
 }
+.right-16 {
+  right: 4rem;
+}
 .right-2 {
   right: 0.5rem;
-}
-.right-24 {
-  right: 6rem;
 }
 .right-3 {
   right: 0.75rem;
@@ -692,12 +692,6 @@ video {
 }
 .top-\[calc\(100\%\+2rem\)\] {
   top: calc(100% + 2rem);
-}
-.right-16 {
-  right: 4rem;
-}
-.left-16 {
-  left: 4rem;
 }
 .-z-10 {
   z-index: -10;
@@ -1002,9 +996,6 @@ video {
 .h-full {
   height: 100%;
 }
-.h-auto {
-  height: auto;
-}
 .max-h-32 {
   max-height: 8rem;
 }
@@ -1076,9 +1067,6 @@ video {
 }
 .w-\[290px\] {
   width: 290px;
-}
-.w-\[75\%\] {
-  width: 75%;
 }
 .w-fit {
   width: -moz-fit-content;
@@ -1567,9 +1555,6 @@ video {
 }
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
-}
-.bg-opacity-35 {
-  --tw-bg-opacity: 0.35;
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
@@ -2623,6 +2608,10 @@ video {
     width: 3rem;
   }
 
+  .md\:w-3\/4 {
+    width: 75%;
+  }
+
   .md\:w-5 {
     width: 1.25rem;
   }
@@ -2633,10 +2622,6 @@ video {
 
   .md\:w-8 {
     width: 2rem;
-  }
-
-  .md\:w-3\/4 {
-    width: 75%;
   }
 
   .md\:grid-cols-2 {
@@ -2663,14 +2648,6 @@ video {
     flex-direction: row;
   }
 
-  .md\:items-center {
-    align-items: center;
-  }
-
-  .md\:justify-center {
-    justify-content: center;
-  }
-
   .md\:gap-10 {
     gap: 2.5rem;
   }
@@ -2691,10 +2668,6 @@ video {
     gap: 1.5rem;
   }
 
-  .md\:gap-3 {
-    gap: 0.75rem;
-  }
-
   .md\:gap-x-10 {
     -moz-column-gap: 2.5rem;
          column-gap: 2.5rem;
@@ -2707,6 +2680,11 @@ video {
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .md\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .md\:px-5 {
@@ -2727,11 +2705,6 @@ video {
   .md\:py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
-  }
-
-  .md\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
   }
 
   .md\:pe-4 {
@@ -2797,16 +2770,16 @@ video {
     bottom: 5rem;
   }
 
-  .lg\:top-20 {
-    top: 5rem;
+  .lg\:left-24 {
+    left: 6rem;
   }
 
   .lg\:right-24 {
     right: 6rem;
   }
 
-  .lg\:left-24 {
-    left: 6rem;
+  .lg\:top-20 {
+    top: 5rem;
   }
 
   .lg\:mx-0 {
@@ -2882,12 +2855,12 @@ video {
     height: 31.25rem;
   }
 
-  .lg\:h-\[80vh\] {
-    height: 80vh;
-  }
-
   .lg\:h-\[542px\] {
     height: 542px;
+  }
+
+  .lg\:h-\[80vh\] {
+    height: 80vh;
   }
 
   .lg\:max-h-96 {
@@ -2906,32 +2879,12 @@ video {
     width: 83.333333%;
   }
 
-  .lg\:w-auto {
-    width: auto;
-  }
-
-  .lg\:w-\[\] {
-    width: ;
-  }
-
-  .lg\:w-\[75\^\] {
-    width: 75^;
-  }
-
-  .lg\:w-\[75\&\] {
-    width: 75&;
-  }
-
-  .lg\:w-\[75\&\&\*\] {
-    width: 75&&*;
-  }
-
-  .lg\:w-\[75\*\] {
-    width: 75*;
-  }
-
   .lg\:w-\[75\%\] {
     width: 75%;
+  }
+
+  .lg\:w-auto {
+    width: auto;
   }
 
   .lg\:grid-cols-1 {
@@ -2974,12 +2927,12 @@ video {
     justify-content: flex-end;
   }
 
-  .lg\:gap-6 {
-    gap: 1.5rem;
-  }
-
   .lg\:gap-0 {
     gap: 0px;
+  }
+
+  .lg\:gap-6 {
+    gap: 1.5rem;
   }
 
   .lg\:gap-y-5 {
@@ -3045,6 +2998,16 @@ video {
     padding-bottom: 0.75rem;
   }
 
+  .lg\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .lg\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
   .lg\:pb-0 {
     padding-bottom: 0px;
   }
@@ -3094,6 +3057,14 @@ video {
 
   .lg\:leading-\[1\.3\] {
     line-height: 1.3;
+  }
+
+  @media (min-width: 1280px) {
+
+    .lg\:xl\:px-24 {
+      padding-left: 6rem;
+      padding-right: 6rem;
+    }
   }
 }
 
@@ -3186,6 +3157,11 @@ video {
   .xl\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+  }
+
+  .xl\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
 
   .xl\:text-3xl {
